# djinn

./: Cargo.toml  README.md  makefile  random_quotes.zig
cmd/cli/: main.go
crates/djinn-agent/: Cargo.toml
crates/djinn-agent/src/: lib.rs
crates/djinn-chats/: Cargo.toml
crates/djinn-chats/src/: lib.rs
crates/djinn-cli/: Cargo.toml
crates/djinn-cli/src/: main.rs
crates/djinn-contexts/: Cargo.toml
crates/djinn-contexts/src/: lib.rs
crates/djinn-core/: Cargo.toml
crates/djinn-core/src/: lib.rs
crates/djinn-memory/: Cargo.toml
crates/djinn-memory/src/: agent_sessions.rs  file_history.rs  lib.rs
crates/djinn-names/: Cargo.toml
crates/djinn-names/src/: lib.rs
crates/djinn-opencode/: Cargo.toml
crates/djinn-opencode/src/: lib.rs
crates/djinn-skills/: Cargo.toml
crates/djinn-skills/src/: lib.rs
crates/djinn-suggest/: Cargo.toml
crates/djinn-suggest/src/: lib.rs
crates/djinn-tools/: Cargo.toml
crates/djinn-tools/src/: lib.rs
crates/djinn-tui/: Cargo.toml
crates/djinn-tui/src/: lib.rs
docs/: agent-design-decisions.md  agent-feature-inventory.md  agent-roadmap.md  app-guide.md  autolearn-feature-inventory.md  rust-checklist.md  tui-future-tabs.md
internal/parser/: parser.go
internal/ui/: ui.go
legacy/go/: README.md  go.mod  go.sum  makefile
legacy/go/internal/parser/: highlight.go
legacy/go/internal/styles/: styles.go
legacy/go/internal/ui/: ui.go
