[workspace]
members = [
  "crates/djinn-cli",
  "crates/djinn-chats",
  "crates/djinn-contexts",
  "crates/djinn-core",
  "crates/djinn-agent",
  "crates/djinn-memory",
  "crates/djinn-opencode",
  "crates/djinn-skills",
  "crates/djinn-tools",
  "crates/djinn-suggest",
  "crates/djinn-tui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/Noswad123/djinn"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.0", features = ["rt"] }
walkdir = "2.5"
