[package]
name = "djinn-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
djinn-memory = { path = "../djinn-memory" }
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[dev-dependencies]
tokio.workspace = true
