[package]
name = "djinn-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "djinn"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
djinn-agent = { path = "../djinn-agent" }
djinn-chats = { path = "../djinn-chats" }
djinn-contexts = { path = "../djinn-contexts" }
djinn-core = { path = "../djinn-core" }
djinn-memory = { path = "../djinn-memory" }
djinn-opencode = { path = "../djinn-opencode" }
djinn-skills = { path = "../djinn-skills" }
djinn-tools = { path = "../djinn-tools" }
djinn-suggest = { path = "../djinn-suggest" }
djinn-tui = { path = "../djinn-tui" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
